// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Chip /> snapshot it should match snapshot with disabled 1`] = `
<Chip
  disabled={true}
>
  <ButtonPill
    className="md-chip-wrapper"
    data-error={false}
    data-modifier-color="mint"
    data-multiline={false}
    data-search={false}
    data-size={28}
    disabled={true}
    size={28}
  >
    <ButtonSimple
      aria-disabled={false}
      className="md-button-pill-wrapper md-chip-wrapper"
      data-color="primary"
      data-disabled={true}
      data-disabled-outline={false}
      data-error={false}
      data-ghost={false}
      data-grown={false}
      data-inverted={false}
      data-modifier-color="mint"
      data-multiline={false}
      data-outline={false}
      data-search={false}
      data-shallow-disabled={false}
      data-size={28}
      isDisabled={true}
    >
      <FocusRing
        disabled={true}
      >
        <FocusRing
          disabled={true}
          focusClass="md-focus-ring-wrapper-disabled"
          focusRingClass="md-focus-ring-wrapper-disabled"
        >
          <button
            className="md-button-pill-wrapper md-chip-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={true}
            data-disabled-outline={false}
            data-error={false}
            data-ghost={false}
            data-grown={false}
            data-inverted={false}
            data-modifier-color="mint"
            data-multiline={false}
            data-outline={false}
            data-search={false}
            data-shallow-disabled={false}
            data-size={28}
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <Text
              className="md-chip-center-section"
              data-multiline={false}
              data-search={false}
              tagName="p"
              type="body-primary"
            >
              <Text
                className="md-text-wrapper md-chip-center-section"
                data-multiline={false}
                data-search={false}
                tagname="p"
                type="body-large-regular"
              >
                <mdc-text
                  class="md-text-wrapper md-chip-center-section"
                  data-multiline={false}
                  data-search={false}
                  suppressHydrationWarning={true}
                />
              </Text>
            </Text>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonPill>
</Chip>
`;

exports[`<Chip /> snapshot it should match snapshot with error 1`] = `
<Chip
  error={true}
>
  <ButtonPill
    className="md-chip-wrapper"
    data-error={true}
    data-modifier-color="mint"
    data-multiline={false}
    data-search={false}
    data-size={28}
    error={true}
    size={28}
  >
    <ButtonSimple
      aria-disabled={false}
      className="md-button-pill-wrapper md-chip-wrapper"
      data-color="primary"
      data-disabled={false}
      data-disabled-outline={false}
      data-error={true}
      data-ghost={false}
      data-grown={false}
      data-inverted={false}
      data-modifier-color="mint"
      data-multiline={false}
      data-outline={false}
      data-search={false}
      data-shallow-disabled={false}
      data-size={28}
      error={true}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-button-pill-wrapper md-chip-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-disabled-outline={false}
            data-error={true}
            data-ghost={false}
            data-grown={false}
            data-inverted={false}
            data-modifier-color="mint"
            data-multiline={false}
            data-outline={false}
            data-search={false}
            data-shallow-disabled={false}
            data-size={28}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <Text
              className="md-chip-center-section"
              data-multiline={false}
              data-search={false}
              tagName="p"
              type="body-primary"
            >
              <Text
                className="md-text-wrapper md-chip-center-section"
                data-multiline={false}
                data-search={false}
                tagname="p"
                type="body-large-regular"
              >
                <mdc-text
                  class="md-text-wrapper md-chip-center-section"
                  data-multiline={false}
                  data-search={false}
                  suppressHydrationWarning={true}
                />
              </Text>
            </Text>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonPill>
</Chip>
`;

exports[`<Chip /> snapshot it should match snapshot with mulitline color 1`] = `
<Chip
  chipColor="cobalt"
  multiline={true}
>
  <ButtonPill
    chipColor="cobalt"
    className="md-chip-wrapper"
    data-error={false}
    data-modifier-color="cobalt"
    data-multiline={true}
    data-search={false}
    data-size={28}
    multiline={true}
    size={28}
  >
    <ButtonSimple
      aria-disabled={false}
      chipColor="cobalt"
      className="md-button-pill-wrapper md-chip-wrapper"
      data-color="primary"
      data-disabled={false}
      data-disabled-outline={false}
      data-error={false}
      data-ghost={false}
      data-grown={false}
      data-inverted={false}
      data-modifier-color="cobalt"
      data-multiline={true}
      data-outline={false}
      data-search={false}
      data-shallow-disabled={false}
      data-size={28}
      multiline={true}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-button-pill-wrapper md-chip-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-disabled-outline={false}
            data-error={false}
            data-ghost={false}
            data-grown={false}
            data-inverted={false}
            data-modifier-color="cobalt"
            data-multiline={true}
            data-outline={false}
            data-search={false}
            data-shallow-disabled={false}
            data-size={28}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <Text
              className="md-chip-center-section"
              data-multiline={true}
              data-search={false}
              tagName="h3"
              type="subheader-secondary"
            >
              <Text
                className="md-text-wrapper md-chip-center-section"
                data-multiline={true}
                data-search={false}
                tagname="h3"
                type="body-midsize-medium"
              >
                <mdc-text
                  class="md-text-wrapper md-chip-center-section"
                  data-multiline={true}
                  data-search={false}
                  suppressHydrationWarning={true}
                />
              </Text>
            </Text>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonPill>
</Chip>
`;

exports[`<Chip /> snapshot it should match snapshot with multiline 1`] = `
<Chip
  multiline={true}
>
  <ButtonPill
    className="md-chip-wrapper"
    data-error={false}
    data-modifier-color="mint"
    data-multiline={true}
    data-search={false}
    data-size={28}
    multiline={true}
    size={28}
  >
    <ButtonSimple
      aria-disabled={false}
      className="md-button-pill-wrapper md-chip-wrapper"
      data-color="primary"
      data-disabled={false}
      data-disabled-outline={false}
      data-error={false}
      data-ghost={false}
      data-grown={false}
      data-inverted={false}
      data-modifier-color="mint"
      data-multiline={true}
      data-outline={false}
      data-search={false}
      data-shallow-disabled={false}
      data-size={28}
      multiline={true}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-button-pill-wrapper md-chip-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-disabled-outline={false}
            data-error={false}
            data-ghost={false}
            data-grown={false}
            data-inverted={false}
            data-modifier-color="mint"
            data-multiline={true}
            data-outline={false}
            data-search={false}
            data-shallow-disabled={false}
            data-size={28}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <Text
              className="md-chip-center-section"
              data-multiline={true}
              data-search={false}
              tagName="h3"
              type="subheader-secondary"
            >
              <Text
                className="md-text-wrapper md-chip-center-section"
                data-multiline={true}
                data-search={false}
                tagname="h3"
                type="body-midsize-medium"
              >
                <mdc-text
                  class="md-text-wrapper md-chip-center-section"
                  data-multiline={true}
                  data-search={false}
                  suppressHydrationWarning={true}
                />
              </Text>
            </Text>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonPill>
</Chip>
`;

exports[`<Chip /> snapshot it should match snapshot with outline 1`] = `
<Chip
  outline={true}
>
  <ButtonPill
    className="md-chip-wrapper"
    data-error={false}
    data-modifier-color="mint"
    data-multiline={false}
    data-search={false}
    data-size={28}
    outline={true}
    size={28}
  >
    <ButtonSimple
      aria-disabled={false}
      className="md-button-pill-wrapper md-chip-wrapper"
      data-color="primary"
      data-disabled={false}
      data-disabled-outline={false}
      data-error={false}
      data-ghost={false}
      data-grown={false}
      data-inverted={false}
      data-modifier-color="mint"
      data-multiline={false}
      data-outline={true}
      data-search={false}
      data-shallow-disabled={false}
      data-size={28}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-button-pill-wrapper md-chip-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-disabled-outline={false}
            data-error={false}
            data-ghost={false}
            data-grown={false}
            data-inverted={false}
            data-modifier-color="mint"
            data-multiline={false}
            data-outline={true}
            data-search={false}
            data-shallow-disabled={false}
            data-size={28}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <Text
              className="md-chip-center-section"
              data-multiline={false}
              data-search={false}
              tagName="p"
              type="body-primary"
            >
              <Text
                className="md-text-wrapper md-chip-center-section"
                data-multiline={false}
                data-search={false}
                tagname="p"
                type="body-large-regular"
              >
                <mdc-text
                  class="md-text-wrapper md-chip-center-section"
                  data-multiline={false}
                  data-search={false}
                  suppressHydrationWarning={true}
                />
              </Text>
            </Text>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonPill>
</Chip>
`;

exports[`<Chip /> snapshot it should match snapshot with search 1`] = `
<Chip
  search={true}
>
  <ButtonPill
    className="md-chip-wrapper"
    data-error={false}
    data-modifier-color="mint"
    data-multiline={false}
    data-search={true}
    data-size={28}
    search={true}
    size={28}
  >
    <ButtonSimple
      aria-disabled={false}
      className="md-button-pill-wrapper md-chip-wrapper"
      data-color="primary"
      data-disabled={false}
      data-disabled-outline={false}
      data-error={false}
      data-ghost={false}
      data-grown={false}
      data-inverted={false}
      data-modifier-color="mint"
      data-multiline={false}
      data-outline={false}
      data-search={true}
      data-shallow-disabled={false}
      data-size={28}
      search={true}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-button-pill-wrapper md-chip-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-disabled-outline={false}
            data-error={false}
            data-ghost={false}
            data-grown={false}
            data-inverted={false}
            data-modifier-color="mint"
            data-multiline={false}
            data-outline={false}
            data-search={true}
            data-shallow-disabled={false}
            data-size={28}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <Text
              className="md-chip-center-section"
              data-multiline={false}
              data-search={true}
              tagName="p"
              type="body-primary"
            >
              <Text
                className="md-text-wrapper md-chip-center-section"
                data-multiline={false}
                data-search={true}
                tagname="p"
                type="body-large-regular"
              >
                <mdc-text
                  class="md-text-wrapper md-chip-center-section"
                  data-multiline={false}
                  data-search={true}
                  suppressHydrationWarning={true}
                />
              </Text>
            </Text>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonPill>
</Chip>
`;

exports[`<Chip /> snapshot should match snapshot 1`] = `
<Chip>
  <ButtonPill
    className="md-chip-wrapper"
    data-error={false}
    data-modifier-color="mint"
    data-multiline={false}
    data-search={false}
    data-size={28}
    size={28}
  >
    <ButtonSimple
      aria-disabled={false}
      className="md-button-pill-wrapper md-chip-wrapper"
      data-color="primary"
      data-disabled={false}
      data-disabled-outline={false}
      data-error={false}
      data-ghost={false}
      data-grown={false}
      data-inverted={false}
      data-modifier-color="mint"
      data-multiline={false}
      data-outline={false}
      data-search={false}
      data-shallow-disabled={false}
      data-size={28}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-button-pill-wrapper md-chip-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-disabled-outline={false}
            data-error={false}
            data-ghost={false}
            data-grown={false}
            data-inverted={false}
            data-modifier-color="mint"
            data-multiline={false}
            data-outline={false}
            data-search={false}
            data-shallow-disabled={false}
            data-size={28}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <Text
              className="md-chip-center-section"
              data-multiline={false}
              data-search={false}
              tagName="p"
              type="body-primary"
            >
              <Text
                className="md-text-wrapper md-chip-center-section"
                data-multiline={false}
                data-search={false}
                tagname="p"
                type="body-large-regular"
              >
                <mdc-text
                  class="md-text-wrapper md-chip-center-section"
                  data-multiline={false}
                  data-search={false}
                  suppressHydrationWarning={true}
                />
              </Text>
            </Text>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonPill>
</Chip>
`;

exports[`<Chip /> snapshot should match snapshot with avatar 1`] = `
<Chip
  avatar={
    <Avatar>
      AA
    </Avatar>
  }
>
  <ButtonPill
    avatar={
      <Avatar>
        AA
      </Avatar>
    }
    className="md-chip-wrapper"
    data-error={false}
    data-modifier-color="mint"
    data-multiline={false}
    data-search={false}
    data-size={28}
    size={28}
  >
    <ButtonSimple
      aria-disabled={false}
      avatar={
        <Avatar>
          AA
        </Avatar>
      }
      className="md-button-pill-wrapper md-chip-wrapper"
      data-color="primary"
      data-disabled={false}
      data-disabled-outline={false}
      data-error={false}
      data-ghost={false}
      data-grown={false}
      data-inverted={false}
      data-modifier-color="mint"
      data-multiline={false}
      data-outline={false}
      data-search={false}
      data-shallow-disabled={false}
      data-size={28}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-button-pill-wrapper md-chip-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-disabled-outline={false}
            data-error={false}
            data-ghost={false}
            data-grown={false}
            data-inverted={false}
            data-modifier-color="mint"
            data-multiline={false}
            data-outline={false}
            data-search={false}
            data-shallow-disabled={false}
            data-size={28}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <div
              className="md-chip-left-section"
              data-avatar={true}
            >
              <Avatar>
                <div
                  aria-hidden="false"
                  aria-label=""
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={24}
                  role="img"
                />
              </Avatar>
            </div>
            <Text
              className="md-chip-center-section"
              data-multiline={false}
              data-search={false}
              tagName="p"
              type="body-primary"
            >
              <Text
                className="md-text-wrapper md-chip-center-section"
                data-multiline={false}
                data-search={false}
                tagname="p"
                type="body-large-regular"
              >
                <mdc-text
                  class="md-text-wrapper md-chip-center-section"
                  data-multiline={false}
                  data-search={false}
                  suppressHydrationWarning={true}
                />
              </Text>
            </Text>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonPill>
</Chip>
`;

exports[`<Chip /> snapshot should match snapshot with className 1`] = `
<Chip
  className="example-class"
>
  <ButtonPill
    className="example-class"
    data-error={false}
    data-modifier-color="mint"
    data-multiline={false}
    data-search={false}
    data-size={28}
    size={28}
  >
    <ButtonSimple
      aria-disabled={false}
      className="md-button-pill-wrapper example-class"
      data-color="primary"
      data-disabled={false}
      data-disabled-outline={false}
      data-error={false}
      data-ghost={false}
      data-grown={false}
      data-inverted={false}
      data-modifier-color="mint"
      data-multiline={false}
      data-outline={false}
      data-search={false}
      data-shallow-disabled={false}
      data-size={28}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-button-pill-wrapper example-class md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-disabled-outline={false}
            data-error={false}
            data-ghost={false}
            data-grown={false}
            data-inverted={false}
            data-modifier-color="mint"
            data-multiline={false}
            data-outline={false}
            data-search={false}
            data-shallow-disabled={false}
            data-size={28}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <Text
              className="md-chip-center-section"
              data-multiline={false}
              data-search={false}
              tagName="p"
              type="body-primary"
            >
              <Text
                className="md-text-wrapper md-chip-center-section"
                data-multiline={false}
                data-search={false}
                tagname="p"
                type="body-large-regular"
              >
                <mdc-text
                  class="md-text-wrapper md-chip-center-section"
                  data-multiline={false}
                  data-search={false}
                  suppressHydrationWarning={true}
                />
              </Text>
            </Text>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonPill>
</Chip>
`;

exports[`<Chip /> snapshot should match snapshot with id 1`] = `
<Chip
  id="example-id"
>
  <ButtonPill
    className="md-chip-wrapper"
    data-error={false}
    data-modifier-color="mint"
    data-multiline={false}
    data-search={false}
    data-size={28}
    id="example-id"
    size={28}
  >
    <ButtonSimple
      aria-disabled={false}
      className="md-button-pill-wrapper md-chip-wrapper"
      data-color="primary"
      data-disabled={false}
      data-disabled-outline={false}
      data-error={false}
      data-ghost={false}
      data-grown={false}
      data-inverted={false}
      data-modifier-color="mint"
      data-multiline={false}
      data-outline={false}
      data-search={false}
      data-shallow-disabled={false}
      data-size={28}
      id="example-id"
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-button-pill-wrapper md-chip-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-disabled-outline={false}
            data-error={false}
            data-ghost={false}
            data-grown={false}
            data-inverted={false}
            data-modifier-color="mint"
            data-multiline={false}
            data-outline={false}
            data-search={false}
            data-shallow-disabled={false}
            data-size={28}
            id="example-id"
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <Text
              className="md-chip-center-section"
              data-multiline={false}
              data-search={false}
              tagName="p"
              type="body-primary"
            >
              <Text
                className="md-text-wrapper md-chip-center-section"
                data-multiline={false}
                data-search={false}
                tagname="p"
                type="body-large-regular"
              >
                <mdc-text
                  class="md-text-wrapper md-chip-center-section"
                  data-multiline={false}
                  data-search={false}
                  suppressHydrationWarning={true}
                />
              </Text>
            </Text>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonPill>
</Chip>
`;

exports[`<Chip /> snapshot should match snapshot with left icon 1`] = `
<Chip
  leftIcon={
    <Icon
      name="placeholder"
      scale={16}
    />
  }
>
  <ButtonPill
    className="md-chip-wrapper"
    data-error={false}
    data-modifier-color="mint"
    data-multiline={false}
    data-search={false}
    data-size={28}
    leftIcon={
      <Icon
        name="placeholder"
        scale={16}
      />
    }
    size={28}
  >
    <ButtonSimple
      aria-disabled={false}
      className="md-button-pill-wrapper md-chip-wrapper"
      data-color="primary"
      data-disabled={false}
      data-disabled-outline={false}
      data-error={false}
      data-ghost={false}
      data-grown={false}
      data-inverted={false}
      data-modifier-color="mint"
      data-multiline={false}
      data-outline={false}
      data-search={false}
      data-shallow-disabled={false}
      data-size={28}
      leftIcon={
        <Icon
          name="placeholder"
          scale={16}
        />
      }
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-button-pill-wrapper md-chip-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-disabled-outline={false}
            data-error={false}
            data-ghost={false}
            data-grown={false}
            data-inverted={false}
            data-modifier-color="mint"
            data-multiline={false}
            data-outline={false}
            data-search={false}
            data-shallow-disabled={false}
            data-size={28}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <div
              className="md-chip-left-section"
              data-avatar={false}
            >
              <Icon
                name="placeholder"
                scale={16}
              >
                <Icon
                  className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                  data-autoscale={false}
                  data-scale={16}
                  data-test="placeholder"
                  name="placeholder-regular"
                  style={Object {}}
                >
                  <mdc-icon
                    class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                    data-autoscale={false}
                    data-scale={16}
                    data-test="placeholder"
                    style={Object {}}
                    suppressHydrationWarning={true}
                  />
                </Icon>
              </Icon>
            </div>
            <Text
              className="md-chip-center-section"
              data-multiline={false}
              data-search={false}
              tagName="p"
              type="body-primary"
            >
              <Text
                className="md-text-wrapper md-chip-center-section"
                data-multiline={false}
                data-search={false}
                tagname="p"
                type="body-large-regular"
              >
                <mdc-text
                  class="md-text-wrapper md-chip-center-section"
                  data-multiline={false}
                  data-search={false}
                  suppressHydrationWarning={true}
                />
              </Text>
            </Text>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonPill>
</Chip>
`;

exports[`<Chip /> snapshot should match snapshot with right icon 1`] = `
<Chip
  rightIcon={
    <Icon
      name="placeholder"
      scale={16}
    />
  }
>
  <ButtonPill
    className="md-chip-wrapper"
    data-error={false}
    data-modifier-color="mint"
    data-multiline={false}
    data-search={false}
    data-size={28}
    rightIcon={
      <Icon
        name="placeholder"
        scale={16}
      />
    }
    size={28}
  >
    <ButtonSimple
      aria-disabled={false}
      className="md-button-pill-wrapper md-chip-wrapper"
      data-color="primary"
      data-disabled={false}
      data-disabled-outline={false}
      data-error={false}
      data-ghost={false}
      data-grown={false}
      data-inverted={false}
      data-modifier-color="mint"
      data-multiline={false}
      data-outline={false}
      data-search={false}
      data-shallow-disabled={false}
      data-size={28}
      rightIcon={
        <Icon
          name="placeholder"
          scale={16}
        />
      }
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-button-pill-wrapper md-chip-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-disabled-outline={false}
            data-error={false}
            data-ghost={false}
            data-grown={false}
            data-inverted={false}
            data-modifier-color="mint"
            data-multiline={false}
            data-outline={false}
            data-search={false}
            data-shallow-disabled={false}
            data-size={28}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <Text
              className="md-chip-center-section"
              data-multiline={false}
              data-search={false}
              tagName="p"
              type="body-primary"
            >
              <Text
                className="md-text-wrapper md-chip-center-section"
                data-multiline={false}
                data-search={false}
                tagname="p"
                type="body-large-regular"
              >
                <mdc-text
                  class="md-text-wrapper md-chip-center-section"
                  data-multiline={false}
                  data-search={false}
                  suppressHydrationWarning={true}
                />
              </Text>
            </Text>
            <div
              className="md-chip-right-section"
            >
              <Icon
                name="placeholder"
                scale={16}
              >
                <Icon
                  className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                  data-autoscale={false}
                  data-scale={16}
                  data-test="placeholder"
                  name="placeholder-regular"
                  style={Object {}}
                >
                  <mdc-icon
                    class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                    data-autoscale={false}
                    data-scale={16}
                    data-test="placeholder"
                    style={Object {}}
                    suppressHydrationWarning={true}
                  />
                </Icon>
              </Icon>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonPill>
</Chip>
`;

exports[`<Chip /> snapshot should match snapshot with style 1`] = `
<Chip
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ButtonPill
    className="md-chip-wrapper"
    data-error={false}
    data-modifier-color="mint"
    data-multiline={false}
    data-search={false}
    data-size={28}
    size={28}
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <ButtonSimple
      aria-disabled={false}
      className="md-button-pill-wrapper md-chip-wrapper"
      data-color="primary"
      data-disabled={false}
      data-disabled-outline={false}
      data-error={false}
      data-ghost={false}
      data-grown={false}
      data-inverted={false}
      data-modifier-color="mint"
      data-multiline={false}
      data-outline={false}
      data-search={false}
      data-shallow-disabled={false}
      data-size={28}
      style={
        Object {
          "color": "pink",
        }
      }
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-button-pill-wrapper md-chip-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-disabled-outline={false}
            data-error={false}
            data-ghost={false}
            data-grown={false}
            data-inverted={false}
            data-modifier-color="mint"
            data-multiline={false}
            data-outline={false}
            data-search={false}
            data-shallow-disabled={false}
            data-size={28}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "color": "pink",
              }
            }
            type="button"
          >
            <Text
              className="md-chip-center-section"
              data-multiline={false}
              data-search={false}
              tagName="p"
              type="body-primary"
            >
              <Text
                className="md-text-wrapper md-chip-center-section"
                data-multiline={false}
                data-search={false}
                tagname="p"
                type="body-large-regular"
              >
                <mdc-text
                  class="md-text-wrapper md-chip-center-section"
                  data-multiline={false}
                  data-search={false}
                  suppressHydrationWarning={true}
                />
              </Text>
            </Text>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonPill>
</Chip>
`;

exports[`<Chip /> snapshot should match snapshot with text 1`] = `
<Chip
  text="Some chip text"
>
  <ButtonPill
    className="md-chip-wrapper"
    data-error={false}
    data-modifier-color="mint"
    data-multiline={false}
    data-search={false}
    data-size={28}
    size={28}
    text="Some chip text"
  >
    <ButtonSimple
      aria-disabled={false}
      className="md-button-pill-wrapper md-chip-wrapper"
      data-color="primary"
      data-disabled={false}
      data-disabled-outline={false}
      data-error={false}
      data-ghost={false}
      data-grown={false}
      data-inverted={false}
      data-modifier-color="mint"
      data-multiline={false}
      data-outline={false}
      data-search={false}
      data-shallow-disabled={false}
      data-size={28}
      text="Some chip text"
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-button-pill-wrapper md-chip-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-disabled-outline={false}
            data-error={false}
            data-ghost={false}
            data-grown={false}
            data-inverted={false}
            data-modifier-color="mint"
            data-multiline={false}
            data-outline={false}
            data-search={false}
            data-shallow-disabled={false}
            data-size={28}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <Text
              className="md-chip-center-section"
              data-multiline={false}
              data-search={false}
              tagName="p"
              type="body-primary"
            >
              <Text
                className="md-text-wrapper md-chip-center-section"
                data-multiline={false}
                data-search={false}
                tagname="p"
                type="body-large-regular"
              >
                <mdc-text
                  class="md-text-wrapper md-chip-center-section"
                  data-multiline={false}
                  data-search={false}
                  suppressHydrationWarning={true}
                >
                  Some chip text
                </mdc-text>
              </Text>
            </Text>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonPill>
</Chip>
`;
